test/corpus/attributes.txt
================================================================================
attribute - double-quoted value
================================================================================
<div class="container">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - single-quoted value
================================================================================
<div class='container'>Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - unquoted value
================================================================================
<div class=container>Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (unquoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - boolean (no value)
================================================================================
<input disabled>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name)))))

================================================================================
attribute - multiple boolean attributes
================================================================================
<input disabled readonly required>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name))
      (attribute (attribute_name))
      (attribute (attribute_name)))))

================================================================================
attribute - empty value double-quoted
================================================================================
<div data-value="">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - empty value single-quoted
================================================================================
<div data-value=''>Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - value with spaces (double-quoted)
================================================================================
<div title="Hello World">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - value with special characters
================================================================================
<a href="https://example.com/path?query=1&amp;other=2">Link</a>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value (character_reference))))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - data attributes
================================================================================
<div data-id="123" data-name="test" data-active="true">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - hyphenated names
================================================================================
<div aria-label="Menu" aria-hidden="true">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - mixed quote styles
================================================================================
<div class="foo" id='bar' data-x=baz>Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (unquoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - whitespace around equals sign
================================================================================
<div class = "container">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - multiple whitespace between attributes
================================================================================
<div   class="a"    id="b"   >Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - character reference in value
================================================================================
<div title="&lt;Hello&gt;">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (character_reference)
          (character_reference))))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - numeric character reference in value
================================================================================
<div title="&#60;code&#62;">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (character_reference)
          (character_reference))))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - hex character reference in value
================================================================================
<div title="&#x3C;code&#x3E;">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (character_reference)
          (character_reference))))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - event handler
================================================================================
<button onclick="alert('hi')">Click</button>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - style attribute
================================================================================
<div style="color: red; font-size: 12px;">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - class with multiple values
================================================================================
<div class="foo bar baz qux">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))

================================================================================
attribute - newlines in value
================================================================================
<div title="Line 1
Line 2">Content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value)))
    (text)
    (end_tag (tag_name))))
