test/corpus/basic.txt
================================================================================
basic div element
================================================================================
<div>Hello</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
nested div elements
================================================================================
<div><div>Inner</div></div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))
