test/corpus/comments.txt
================================================================================
comment - simple
================================================================================
<!-- This is a comment -->
--------------------------------------------------------------------------------

(document
  (comment (text)))

================================================================================
comment - empty
================================================================================
<!---->
--------------------------------------------------------------------------------

(document
  (comment))

================================================================================
comment - multiline
================================================================================
<!--
  This is a
  multiline comment
-->
--------------------------------------------------------------------------------

(document
  (comment (text)))

================================================================================
comment - with HTML inside
================================================================================
<!-- <div>This is commented out</div> -->
--------------------------------------------------------------------------------

(document
  (comment (text)))

================================================================================
comment - between elements
================================================================================
<div>Before</div>
<!-- Comment -->
<div>After</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
  (comment (text))
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
comment - inside element
================================================================================
<div>
  <!-- Inner comment -->
  Content
</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (comment (text))
    (text)
    (end_tag (tag_name))))

================================================================================
comment - with dashes inside
================================================================================
<!-- comment-with-dashes and -- more dashes -->
--------------------------------------------------------------------------------

(document
  (comment (text)))

================================================================================
comment - with special characters
================================================================================
<!-- Special: < > & " ' -->
--------------------------------------------------------------------------------

(document
  (comment (text)))

================================================================================
comment - adjacent comments
================================================================================
<!-- First --><!-- Second -->
--------------------------------------------------------------------------------

(document
  (comment (text))
  (comment (text)))

================================================================================
comment - at document start
================================================================================
<!-- First -->
<div>Content</div>
--------------------------------------------------------------------------------

(document
  (comment (text))
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
comment - at document end
================================================================================
<div>Content</div>
<!-- Last -->
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
  (comment (text)))
