test/corpus/custom_elements.txt
================================================================================
custom element - simple
================================================================================
<my-element></my-element>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
custom element - with content
================================================================================
<my-element>Content</my-element>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
custom element - with attributes
================================================================================
<my-element data-value="123" custom-attr="test"></my-element>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value))
      (attribute (attribute_name) (quoted_attribute_value)))
    (end_tag (tag_name))))

================================================================================
custom element - nested
================================================================================
<my-wrapper>
  <my-item>Item 1</my-item>
  <my-item>Item 2</my-item>
</my-wrapper>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))

================================================================================
custom element - mixed with standard elements
================================================================================
<div>
  <my-element>Custom</my-element>
  <p>Standard</p>
</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))

================================================================================
custom element - containing standard elements
================================================================================
<my-card>
  <h2>Title</h2>
  <p>Description</p>
</my-card>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))

================================================================================
custom element - long name
================================================================================
<my-very-long-custom-element-name></my-very-long-custom-element-name>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
custom element - with slot
================================================================================
<my-element>
  <span slot="header">Header</span>
  <span slot="content">Content</span>
</my-element>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (quoted_attribute_value)))
      (text)
      (end_tag (tag_name)))
    (element
      (start_tag
        (tag_name)
        (attribute (attribute_name) (quoted_attribute_value)))
      (text)
      (end_tag (tag_name)))
    (end_tag (tag_name))))
