test/corpus/doctype.txt
================================================================================
doctype - HTML5 standard
================================================================================
<!DOCTYPE html>
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
doctype - lowercase
================================================================================
<!doctype html>
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
doctype - mixed case
================================================================================
<!DoCtYpE HtMl>
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
doctype - with legacy string (double quotes)
================================================================================
<!DOCTYPE html SYSTEM "about:legacy-compat">
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
doctype - with legacy string (single quotes)
================================================================================
<!DOCTYPE html SYSTEM 'about:legacy-compat'>
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
doctype - followed by content
================================================================================
<!DOCTYPE html>
<html>
  <head>
    <title>Test</title>
  </head>
  <body>
    <p>Hello</p>
  </body>
</html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (element
      (start_tag (tag_name))
      (element
        (start_tag (tag_name))
        (text)
        (end_tag (tag_name)))
      (end_tag (tag_name)))
    (element
      (start_tag (tag_name))
      (element
        (start_tag (tag_name))
        (text)
        (end_tag (tag_name)))
      (end_tag (tag_name)))
    (end_tag (tag_name))))

================================================================================
doctype - with extra whitespace
================================================================================
<!DOCTYPE   html  >
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
doctype - with leading whitespace
================================================================================

<!DOCTYPE html>
<html></html>
--------------------------------------------------------------------------------

(document
  (doctype)
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))
